--- a/_posts/data/data-management/data-engineering/concepts/2022-08-07-data-mesh.markdown
+++ b/_posts/data/data-management/data-engineering/concepts/2022-08-07-data-mesh.markdown
@@ -10,9 +10,8 @@ tags: ["data-engineering", "data-mesh", "data-as-a-product"]
 categories: data-engineering
 featured: false
 hidden: true
+draft: true
 ---
-
-> **Writing in progress:** If you have any suggestions for improving the content or notice any inaccuracies, please email me at [hello@senthilnayagan.com](mailto:hello@senthilnayagan.com). Thanks!
 
 Before we go any farther in defining *data mesh*, let's first understand why it's necessary.
 
